Fix alignment of right side of add project form.

--- a/static/css/themes/light/project_selection.css
+++ b/static/css/themes/light/project_selection.css
@@ -60,7 +60,8 @@ ul#project li {
 }
 
 .project_selection #project_name {
-    width: 95.1%;
+    width: 94.7%;
+    margin-right: 1px;
 }
 
 .project_selection #project_members_container ul {
@@ -170,9 +171,9 @@ body, #content_nopad {
 .project_selection input {
 }
 
+
 .project_selection #menu_form {
-    padding: 10px;
-    width: 94%;
+     margin: 10px;
 }
 
 .project_selection .custom_btn { 
